@@ -1,3 +1,7 @@
+2009-08-15  Tolleiv Nietsch <nietsch@aoemedia.de>
+
+	* Fixed bug #11173: Unit tests utilize the Live-Database
+
 2009-08-09  Tolleiv Nietsch <nietsch@aoemedia.de>
 
 	* Fixed bug #11532: TV use makeInstanceClassName and fill the deprecation log 
